Fix alignment of crate-follow button

--- a/app/styles/crate.scss
+++ b/app/styles/crate.scss
@@ -9,6 +9,9 @@
     @include align-items(center);
 
     .wide {
+        @include display-flex;
+        @include flex-wrap(wrap);
+        @include align-items(center);
         width: 100%;
     }
 
